@@ -1,0 +1,46 @@
+<?xml version="1.0"?>
+<VisualStudioProject
+  ProjectType="Visual C++"
+  Version="8.00"
+  Name="scan_image"
+  RootNamespace="scan_image"
+  Keyword="Win32Proj">
+
+  <Platforms>
+    <Platform Name="Win32"/>
+  </Platforms>
+
+  <Configurations>
+    <Configuration
+      Name="Debug|Win32"
+      OutputDirectory="../bin"
+      ConfigurationType="1">
+      <Tool
+        Name="VCCLCompilerTool"
+        Optimization="0"
+        AdditionalIncludeDirectories="..\include"
+        PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+        RuntimeLibrary="3"
+        UsePrecompiledHeader="0"
+        WarningLevel="4"
+        WarnAsError="true"
+        DebugInformationFormat="4"/>
+      <Tool
+        Name="VCLinkerTool"
+        AdditionalDependencies="..\lib\libzbar-0.lib kernel32.lib $(NoInherit)"
+        ShowProgress="0"
+        GenerateDebugInformation="true"
+        SubSystem="1"
+        TargetMachine="1"/>
+    </Configuration>
+  </Configurations>
+
+  <Files>
+    <Filter
+      Name="Source Files"
+      Filter="cpp">
+      <File RelativePath=".\scan_image.cpp"/>
+    </Filter>
+  </Files>
+
+</VisualStudioProject>
